# oktagon-python

./: .coveragerc  .gitattributes  .src.dmypy.json  .travis.yml  Jenkinsfile  Makefile  README.md  RELEASE.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: bump.yml  ci.yml  lint.yml  pipeline.yml  publish.yml  release.yml  test.yml
scripts/: pre-release.sh
src/: mypy.ini
src/oktagon_python/: __init__.py  _version.py  authorisation.py
tests/: test_authorisation.py
